# hackatum2023-check24

./: README.md  docker-compose.yaml
client/: Dockerfile  bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/src/: env.mjs
client/src/app/: layout.tsx  page.tsx
client/src/app/_components/: logo.tsx
client/src/app/api/craftsmen/: route.ts
client/src/app/craftsmen/[postalcode]/: page.tsx
client/src/app/craftsmen/[postalcode]/_components/: craftsmanMap.tsx  craftsmenList.tsx
client/src/lib/: api.ts
client/src/lib/types/: craftsman.ts
presentation/: package-lock.json  package.json  slides.md
server/: .env  .gitignore  Cargo.toml  Dockerfile  startup.sh
server/src/: entity.rs  main.rs  service.rs  setup.rs
