[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.6.20" }
serde_json = "1.0.108"
redis = { version = "0.23.3", features = ["connection-manager", "tokio-comp"] }
log = "0.4.20"
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
